--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@ body {
     position: relative;
 }
 
-.circle {
+.peach {
     width: 100px;
     height: 100px;
     background-color: #F7B5BA;
@@ -21,31 +21,31 @@ body {
     transition: transform 0.3s ease;
 }
 
-.circle:hover {
+.peach:hover {
     transform: scale(1.1);
 }
 
-.circle-1 {
+.peach-1 {
     top: 50px;
     left: 50px;
 }
 
-.circle-2 {
-    top: 20px;
-    left: 150px;
+.peach-2 {
+    top: 20vh;
+    left: 70vw;
 }
 
-.circle-3 {
-    top: 100px;
-    left: 250px;
+.peach-3 {
+    top: 60vh;
+    left: 30vw;
 }
 
-.circle-4 {
-    top: 170px;
-    left: 150px;
+.peach-4 {
+    top: 80vh;
+    left: 10vw;
 }
 
-.circle-5 {
-    top: 250px;
-    left: 50px;
+.peach-5 {
+    top: 40vh;
+    left: 90vw;
 }
