--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,3 +46,48 @@ body {
 .peach-3 { grid-column: 5; grid-row: 1; }
 .peach-4 { grid-column: 2; grid-row: 2; }
 .peach-5 { grid-column: 4; grid-row: 2; }
+
+/* header styling */
+header {
+    background-color: #f9d5e5;
+    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    width: 100%;
+    top: 0;
+}
+
+h1 {
+    margin: 0;
+    padding-left: 10px;
+    font-size: 24px;
+    color: #ff5931;
+}
+
+.login-container {
+    display: flex;
+    align-items: center;
+    padding-right: 20px;
+}
+
+.peach-icon {
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+}
+
+.login-link {
+    text-decoration: none;
+    color: #ff5931;
+    font-weight: bold;
+}
+
+.login-link:hover {
+    text-decoration: underline;
+}
+
+.refresh-text:hover {
+    cursor: pointer;
+}
