--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,11 +10,11 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: auto auto auto auto auto;
     grid-template-rows: auto auto;
     gap: 20px;
-    width: 80%;
-    max-width: 800px;
+    max-width: 1000px;
+    margin: 0 auto;
     position: relative;
 }
 
