--- a/styles/gyatzee.css
+++ b/styles/gyatzee.css
@@ -45,50 +45,18 @@ header {
 main {
     display: flex;
     justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    align-items: flex-start;
+    flex-direction: row;
     margin-top: 50px;
 }
 
-.dice-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-bottom: 20px;
-}
-
-.dice {
-    width: 100px;
-    height: 100px; 
-    background-image: url('https://i.imgur.com/uxspnB3.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    border-radius: 50%;
-    transition: transform 0.3s ease;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 24px; 
-}
-
-.dice:hover {
-    transform: scale(1.1);
-    cursor: pointer;
-}
-
-.peach-number {
-    font-weight: bold;
-}
-
-/* Scorecard */
 .scorecard {
     width: 300px;
     background-color: #ffffff;
     border: 2px solid #000000;
     border-radius: 10px;
     padding: 20px;
+    margin-right: 20px;
 }
 
 .score-section {
@@ -121,6 +89,44 @@ main {
     margin: 0 10px;
 }
 
+/* Dice styles */
+.dice-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+}
+
+.dice {
+    width: 100px;
+    height: 100px; 
+    background-image: url('https://i.imgur.com/uxspnB3.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 50%;
+    transition: transform 0.3s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px; 
+    margin-right: 20px;
+}
+
+.dice:last-child {
+    margin-right: 0;
+}
+
+.dice:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
+.peach-number {
+    font-weight: bold;
+}
+
 /* Breakpoint 1 */
 @media screen and (max-width: 767px) {
     header {
@@ -147,24 +153,24 @@ main {
         margin-top: 70px;
     }
 
-    .dice-container {
-        flex-direction: column;
-        align-items: center;
+    .scorecard, .dice-container {
+        width: 100%;
+        margin-right: 0;
     }
 
     .dice {
-        margin: 10px 0;
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
+
+    .dice:last-child {
+        margin-bottom: 0;
     }
 }
 
 /* Breakpoint 2 */
 @media screen and (max-width: 479px) {
-    .dice {
-        width: 60px;
-        height: 60px;
-    }
-
-    .peach-number {
-        font-size: 16px;
+    .scorecard, .dice-container {
+        width: 100%;
     }
 }
