--- a/styles/forgot_password.css
+++ b/styles/forgot_password.css
@@ -47,11 +47,18 @@ p {
     color: #666666;
 }
 
-a {
+a.login-link {
     color: #007bff;
     text-decoration: none;
+    font-weight: normal;
 }
 
 a:hover {
     text-decoration: underline;
+}
+
+.header-login-link {
+    color: #ff5931;
+    text-decoration: none;
+    font-weight: bold;
 }
